<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activitybg">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="177dp"
        android:layout_marginTop="54dp"
        android:contentDescription="@string/stulogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/location" />

    <EditText
        android:id="@+id/adminmail"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/textfieldbg"
        android:ems="10"
        android:hint="@string/string_mailhint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/adminpassword"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/textfieldbg"

        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminmail"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/adminloginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btnbg"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminpassword" />

    <TextView
        android:id="@+id/movetosignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="283dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="70dp"
        android:text="Don't hava an account"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminloginbtn" />

</androidx.constraintlayout.widget.ConstraintLayout>