<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/textfieldbg"
    tools:context=".addroot">


    <HorizontalScrollView
        android:id="@+id/scrollView3"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">

        <TextView
            android:id="@+id/vehiclelist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0C0C0C"
            android:textSize="18sp" />
    </HorizontalScrollView>

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="359dp"
        android:layout_height="23dp"
        android:layout_marginTop="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <TextView
            android:id="@+id/driverlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#040000" />
    </ScrollView>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/registred_vehicles"
        android:textColor="#040404"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="355sp"
        android:layout_height="0dp"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/registred_drivers"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <ScrollView
        android:layout_width="406dp"
        android:layout_height="552dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/vehiclename"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/textfieldbg"
                android:ems="10"
                android:hint="@string/vehicle_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="10sp"
                android:textColorHint="#5A5A5A" />

            <EditText
                android:id="@+id/namefield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="@drawable/textfieldbg"
                android:ems="10"
                android:hint="Driver Name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10sp"
                android:textColorHint="#5A5A5A"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="@drawable/textfieldbg"
                android:ems="10"
                android:hint="@string/from"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10sp"
                android:textColorHint="#5A5959" />

            <EditText
                android:id="@+id/to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:background="@drawable/textfieldbg"
                android:ems="10"
                android:hint="@string/to"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10sp"
                android:textColorHint="#535353" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/uptime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/textfieldbg"
                    android:ems="10"
                    android:hint="@string/up_time"
                    android:importantForAutofill="no"
                    android:inputType="time"
                    android:minHeight="48dp"
                    android:padding="10sp"
                    android:textColorHint="#504F4F" />

                <RadioGroup
                    android:id="@+id/uprg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/downpm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:checked="false"
                        android:minHeight="48dp"
                        android:text="@string/pm"
                        android:textSize="18sp"
                        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

                    <RadioButton
                        android:id="@+id/downam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:checked="false"
                        android:minHeight="48dp"
                        android:text="@string/am"
                        android:textSize="18sp"
                        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />


                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/downtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/textfieldbg"
                    android:ems="10"
                    android:hint="@string/down_time"
                    android:importantForAutofill="no"
                    android:inputType="time"
                    android:minHeight="48dp"
                    android:padding="10sp"
                    android:textColorHint="#3E3E3E" />

                <RadioGroup
                    android:id="@+id/downrg"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/upam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:checked="false"
                        android:minHeight="48dp"
                        android:text="@string/am"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/uppm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:checked="false"
                        android:minHeight="48dp"
                        android:text="@string/pm"
                        android:textSize="18sp"
                        tools:ignore="TouchTargetSizeCheck" />

                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/add"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:background="@drawable/btnbg"
                android:text="@string/add"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>