<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#A8FFF2">


    <androidx.cardview.widget.CardView
        android:id="@+id/addcard"
        android:layout_width="142dp"
        android:layout_height="132dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/addicon"
        android:backgroundTint="#0000"
        android:clickable="true"
        android:focusable="true"
        android:minWidth="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/img1"
                android:layout_width="131sp"
                android:layout_height="91sp"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/cardview2"
                android:focusable="true"
                android:scaleType="fitXY"
                android:src="@drawable/addicon"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/addcard"
                android:textColor="#00796B" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/rootcard"
        android:layout_width="142dp"
        android:layout_height="132dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/addicon"
        android:backgroundTint="#0000"
        android:clickable="true"
        android:focusable="true"
        android:minWidth="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addcard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/img4"
                android:layout_width="131sp"
                android:layout_height="91sp"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/cardview2"
                android:focusable="true"
                android:scaleType="fitXY"
                android:src="@drawable/rootmap"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,ImageContrastCheck" />

            <TextView
                android:id="@+id/addroot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/routes"
                android:textColor="#00796B" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/viewcard"

        android:layout_width="142dp"
        android:layout_height="132dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#0000"
        android:clickable="true"
        android:focusable="true"
        android:minWidth="48dp"
        app:layout_constraintStart_toEndOf="@+id/addcard"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/img2"
                android:layout_width="131sp"
                android:layout_height="91sp"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/cardview1"
                android:focusable="true"
                android:scaleType="fitXY"
                android:src="@drawable/viewicon"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/viewcard"
                android:textColor="#00796B" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/calviewcard"

        android:layout_width="142dp"
        android:layout_height="132dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#0000"
        android:clickable="true"
        android:focusable="true"
        android:minWidth="48dp"
        app:layout_constraintStart_toEndOf="@+id/addcard"
        app:layout_constraintTop_toBottomOf="@+id/viewcard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/img9"
                android:layout_width="131sp"
                android:layout_height="91sp"
                android:layout_gravity="center"
                android:clickable="true"

                android:contentDescription="@string/cardview1"
                android:focusable="true"
                android:scaleType="fitXY"
                android:src="@drawable/calendar"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,ImageContrastCheck" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/calendar"
                android:textColor="#00796B" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

